--- a/Draft_debat_data_analysis.ipynb
+++ b/Draft_debat_data_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,9 @@
     "from pprint import pprint\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "from tqdm import tqdm_notebook as tqdm\n",
     "\n",
     "%pylab inline\n",
     "pylab.rcParams['figure.figsize'] = (16, 6)"
@@ -629,8 +632,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Stemming"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1806214/1806214 [00:50<00:00, 35479.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem.snowball import FrenchStemmer\n",
+    "stemmer = FrenchStemmer()\n",
+    "\n",
+    "stemmed_tokens = [stemmer.stem(token) for token in tqdm(stacked_tokens)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Top-50 words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {
     "scrolled": true
    },
@@ -638,66 +675,66 @@
     {
      "data": {
       "text/plain": [
-       "plus            20713\n",
-       "dépenses        19089\n",
-       "impôts          18928\n",
-       "chaque          15416\n",
-       "tous            11576\n",
-       "être            10220\n",
-       "impôt           10008\n",
-       "utilisation      9920\n",
-       "faire            9476\n",
-       "état             8585\n",
-       "information      8261\n",
-       "citoyens         8220\n",
-       "transparence     7892\n",
-       "tout             7221\n",
-       "budget           6888\n",
-       "site             6513\n",
-       "comme            5994\n",
-       "année            5937\n",
-       "argent           5693\n",
-       "faut             5460\n",
-       "comptes          5160\n",
-       "internet         5078\n",
-       "etat             4993\n",
-       "publiques        4978\n",
-       "exemple          4919\n",
-       "toutes           4824\n",
-       "services         4770\n",
-       "cela             4741\n",
-       "répartition      4731\n",
-       "ils              4698\n",
-       "citoyen          4671\n",
-       ".                4671\n",
-       "fait             4627\n",
-       "coût             4610\n",
-       "bien             4572\n",
-       "recettes         4548\n",
-       "rendre           4449\n",
-       "français         4423\n",
-       "informer         4307\n",
-       "doit             4292\n",
-       "si               4245\n",
-       "public           4141\n",
-       "leurs            4100\n",
-       "avoir            4087\n",
-       "quoi             4082\n",
-       "sans             4076\n",
-       "donner           4034\n",
-       "taxes            4013\n",
-       "annuel           4010\n",
-       "expliquer        3992\n",
+       "impôt          28936\n",
+       "dépens         23366\n",
+       "plus           20713\n",
+       "inform         16784\n",
+       "chaqu          15464\n",
+       "tout           13981\n",
+       "utilis         13940\n",
+       "citoyen        13280\n",
+       "tous           11576\n",
+       "publiqu        10870\n",
+       "être           10265\n",
+       "fair            9484\n",
+       "transparent     9351\n",
+       "compt           9167\n",
+       "état            8859\n",
+       "budget          8659\n",
+       "franc           8131\n",
+       "public          7790\n",
+       "tax             7478\n",
+       "pai             7438\n",
+       "annuel          7399\n",
+       "fiscal          7220\n",
+       "servic          7205\n",
+       "sit             7131\n",
+       "coût            7087\n",
+       "expliqu         7071\n",
+       "don             6822\n",
+       "anné            6801\n",
+       "grand           6735\n",
+       "fait            6594\n",
+       "comm            6439\n",
+       "social          6378\n",
+       "cel             6073\n",
+       "commun          5876\n",
+       "argent          5724\n",
+       "exempl          5710\n",
+       "collect         5659\n",
+       "faut            5577\n",
+       "financ          5433\n",
+       "part            5373\n",
+       "contribu        5280\n",
+       "cet             5130\n",
+       "etat            5115\n",
+       "internet        5090\n",
+       "répartit        5022\n",
+       "fonction        4996\n",
+       "clair           4974\n",
+       "simpl           4948\n",
+       "bien            4936\n",
+       "recet           4852\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.Series(stacked_tokens).value_counts().iloc[:50]"
+    "pd.Series(stemmed_tokens).value_counts().iloc[:50]"
    ]
   },
   {
